# mast-ollama

./: .agentlinterrc  .codacy.yaml  .gitignore  .markdownlintignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: strategies.md
evals/: README.md  dataset.jsonl  run_eval.py  score.py
src/mast/: __main__.py  _mast_debate_tool.py  _upstream.py  _upstream_tool.py  config.py  server.py
src/mast/agents/: _utils.py  actor_critic.py  base.py  brainstorm.py  critic.py  debono.py  judge.py  kalman.py  tot.py
src/mast/prompts/brainstorm/: idea_generator.md  synthesizer.md
src/mast/prompts/debate/: critic.md  judge.md
src/mast/prompts/debono/: black.md  blue_close.md  blue_open.md  green.md  red.md  white.md  yellow.md
src/mast/prompts/kalman/: scorer.md
src/mast/prompts/tot/: branch_generator.md  voter.md
src/mast/validation/: cache.py  orchestrator.py  schemas.py
tests/fixtures/: upstream_tool_schema.json
tests/integration/: test_debono_flow.py  test_full_flow.py  test_workflow.py
tests/unit/: test_actor_critic.py  test_brainstorm.py  test_config.py  test_critic_parsing.py  test_critic_prompt.py  test_debono_parsing.py  test_debono_prompts.py  test_extract_json.py  test_judge_parsing.py  test_judge_prompt.py  test_kalman.py  test_tot.py  test_upstream_parity.py  test_upstream_purity.py
