[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mast-ollama"
version = "0.1.0"
description = "Multi-Agent Sequential Thinking with Ollama — active validation for MCP sequential-thinking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "jinja2>=3.1.4",
]

[project.scripts]
mast-server = "mast.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mast"]

[tool.hatch.build.targets.wheel.force-include]
"src/mast/prompts" = "mast/prompts"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pydantic-settings>=2.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
